Revise cadastro.html for volunteer registration form

--- a/cadastro.html
+++ b/cadastro.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ONG Esperança - Projetos Sociais</title>
-</head>
-
-<body>
-
-<header>
+<!doctype html><html lang="pt-BR"><head>  <meta charset="utf-8">  <meta name="viewport" content="width=device-width,initial-scale=1">  <title>Cadastro — Instituto Esperança</title>  <meta name="description" content="Formulário de cadastro para voluntários e doadores.">  <link rel="stylesheet" href="assets/css/styles.css"></head><header>
     <img src="assets/img/logo.svg" alt="Logo da ONG" width="120">
     <nav>
         <ul>
@@ -18,43 +8,53 @@
         </ul>
     </nav>
 </header>
-
-<main>
-
-    <section>
-        <h1>Projetos Sociais</h1>
-        <p>Conheça nossos principais programas de impacto social.</p>
-    </section>
-
-    <article>
-        <h2>Projeto Sementes do Futuro</h2>
-        <img src="assets/img/projeto1.jpg" alt="Crianças estudando em aula comunitária">
-        <p>O projeto oferece reforço escolar para crianças entre 6 e 14 anos.</p>
-    </article>
-
-    <article>
-        <h2>Como Ser Voluntário</h2>
-        <img src="assets/img/voluntarios.jpg" alt="Grupo de voluntários reunidos">
-        <p>Participe das nossas ações e faça a diferença na vida de centenas de famílias.</p>
-        <p><strong>Passo a passo:</strong></p>
-        <ol>
-            <li>Faça seu cadastro na plataforma.</li>
-            <li>Escolha o projeto do seu interesse.</li>
-            <li>Aguarde o contato da nossa equipe.</li>
-        </ol>
-    </article>
-
-    <section>
-        <h2>Como Doar</h2>
-        <p>Você pode contribuir para nossos projetos fazendo uma doação segura.</p>
-        <p><strong>Pix:</strong> doacoes@ongesperanca.org</p>
-    </section>
-
-</main>
-
-<footer>
-    <p>&copy; 2025 ONG Esperança</p>
-</footer>
-
-</body>
-</html>
+  <main class="site-main container">
+      <h1>Cadastro de Voluntário / Doador</h1>
+    <form id="cadastroForm" action="#" method="post" novalidate>
+        <fieldset>
+            <legend>Dados pessoais</legend>
+        <label for="nome">Nome completo<span aria-hidden="true"> *</span></label>
+        <input id="nome" name="nome" type="text" required minlength="3" placeholder="Seu nome completo">
+        <label for="email">E‑mail</label>
+            <input id="email" name="email" type="email" required placeholder="seu@exemplo.com">
+        <label for="cpf">CPF</label>
+            <input id="cpf" name="cpf" type="text" inputmode="numeric" required pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" maxlength="14" placeholder="000.000.000-00">
+        <label for="telefone">Telefone</label>
+            <input id="telefone" name="telefone" type="tel" inputmode="tel" required placeholder="(00) 00000-0000" maxlength="15">
+        <label for="nascimento">Data de nascimento</label>
+            <input id="nascimento" name="nascimento" type="date" required>      </fieldset>
+      <fieldset>
+          <legend>Endereço</legend>
+          <label for="cep">CEP</label>
+          <input id="cep" name="cep" type="text" inputmode="numeric" required pattern="\d{5}-?\d{3}" maxlength="9" placeholder="00000-000">
+        <label for="endereco">Endereço</label>
+          <input id="endereco" name="endereco" type="text" required>
+        <label for="cidade">Cidade</label>
+          <input id="cidade" name="cidade" type="text" required>
+        <label for="estado">Estado</label>
+          <select id="estado" name="estado" required>
+              <option value="">Selecione</option>
+              <option value="SP">SP</option>
+              <option value="RJ">RJ</option>
+              <option value="MG">MG</option>
+         </select>
+      </fieldset>
+      <fieldset>
+          <legend>Preferências</legend>
+          <label><input type="checkbox" name="newsletter"> Quero receber newsletter</label>
+          <label for="interesse">Interesse</label>
+          <select id="interesse" name="interesse">
+              <option value="voluntariado">Voluntariado</option>
+              <option value="doacao">Doação</option>
+              <option value="outros">Outros</option>
+          </select>
+      </fieldset>
+      <p class="form-actions"><button class="btn" type="submit">Enviar cadastro</button> <button class="btn ghost" type="reset">Limpar</button></p>
+    </form>
+  </main>
+  <footer class="site-footer">
+      <div class="container">
+          <p>&copy; Instituto Esperança</p>
+      </div>
+  </footer>
+  <script src="assets/js/scripts.js" defer></script></body></html>
